--- a/new/css/main.css
+++ b/new/css/main.css
@@ -79,11 +79,11 @@ h1, h2, h3, h4, h5, h6 {
 	-webkit-box-shadow: inset 0 0 0 2px #fc7700;
 	box-shadow: inset 0 0 0 2px #fc7700;
 	text-transform: uppercase;
-	width: 190px;
+	width: unset;
 	text-align: center;
-	height: 55px;
-	line-height:55px;
-	padding: 0;
+	height: unset;
+	line-height:unset;
+	padding: 20px;
 	font-size: 18px;
 	font-weight:800;
 	border: 0;
