--- a/new/css/main.css
+++ b/new/css/main.css
@@ -1530,3 +1530,12 @@ h1, h2, h3, h4, h5, h6 {
    filter: alpha(opacity=100);
    opacity: 1;
 }
+
+
+/*** [START] OUR NEW ADDITIONS ***/
+#titleHeader{
+	margin: 40px 0 0 !important;
+}
+
+/*** [END] OUR NEW ADDITIONS ***/
+
