--- a/new/css/main.css
+++ b/new/css/main.css
@@ -478,6 +478,32 @@ h1, h2, h3, h4, h5, h6 {
 	top: 0;
 }
 
+.title-two {
+	color: #666666;
+	display: inline-block;
+	font-size: 26px;
+	font-weight: 600;
+	padding-bottom:10px;
+	text-transform: uppercase;
+	position:relative
+}
+
+.title-two:after {
+	color: #fc7700;
+	content: "|";
+	position: absolute;
+	right: -40px;
+	top: -2px;
+}
+
+.title-two:before {
+	color: #fc7700;
+	content: "|";
+	left: -40px;
+	position: absolute;
+	top: 0;
+}
+
 
 #about-us h4 {
 	color: #909090;
@@ -1567,4 +1593,29 @@ a.pp_close {
 
 .innerPictureDiv {
 	align-self: center;
+}
+
+.effectfront {
+  border: none;
+}
+.effectfront:hover {
+  -webkit-transform: scale(1.8);
+  -moz-transform: scale(1.8);
+  -o-transform: scale(1.8);
+  transform: scale(1.8);
+  transition: all 0.3s;
+  -webkit-transition: all 0.2s;
+}
+.effectfront: {
+   padding:1px;
+   border:1px solid #021a40;
+}
+
+.color-name {
+	font-size:13px;
+	height:60px;
+	width:110px; 
+	margin-left:15px; 
+	margin-right:15px; 
+	margin-bottom:0px;
 }
