fixed active on product, added shadow, fixed mobile view

--- a/new/css/main.css
+++ b/new/css/main.css
@@ -1644,3 +1644,8 @@ a.pp_close {
 	left:22%;
 	opacity:0.75;
 }
+
+.boxshadow {
+   	box-shadow: 0 7px 1px -6px lightgray;
+   	padding-bottom: 20px;
+}
