--- a/new/css/main.css
+++ b/new/css/main.css
@@ -1649,3 +1649,28 @@ a.pp_close {
    	box-shadow: 0 7px 1px -6px lightgray;
    	padding-bottom: 20px;
 }
+
+#productmenutitle {
+	margin-top:45px;
+}
+
+#menuitem {
+	overflow:auto;
+	max-height:320px;
+}
+
+#productslot {
+	display:inline-block;
+	position:relative;
+}
+
+#productname {
+	height:60px;
+	margin-left:15px; 
+	margin-right:15px; 
+	margin-bottom:15px;
+}
+
+.typetitle {
+	margin-top:30px;
+}
