removed portfolio menu item and fixed index
added a bunch of working links to a lot of files.

--- a/new/css/main.css
+++ b/new/css/main.css
@@ -1674,3 +1674,22 @@ a.pp_close {
 .typetitle {
 	margin-top:30px;
 }
+
+#manpic {
+	width:100%;
+	height:100%;
+	max-width:150px;
+}
+
+.manpicdiv {
+    height:75px;
+    width:150px;
+	max-height:200px;
+	margin-top:20px;
+	margin:auto;
+}
+
+.manbutton {
+	height:inherit;
+	width:inherit;
+}
