productTemplate.php now adds products to cookie on click.  Since cookies are small, can only store about 12 products in the cart at once.  Fixed a bug when scraping capri @ home using scrapeEverything().

--- a/new/css/main.css
+++ b/new/css/main.css
@@ -1693,3 +1693,11 @@ a.pp_close {
 	height:inherit;
 	width:inherit;
 }
+
+.lightWeight {
+	font-weight: 100;
+}
+
+#manufacturer::before{
+	content: "By ";
+}
