--- a/new/css/main.css
+++ b/new/css/main.css
@@ -1662,6 +1662,13 @@ a.pp_close {
 #productslot {
 	display:inline-block;
 	position:relative;
+	height:200px;
+	overflow:hidden;
+}
+
+#productslot>div.row {
+	max-height:150px;
+	overflow:hidden;
 }
 
 #productname {
@@ -1701,3 +1708,4 @@ a.pp_close {
 #manufacturer::before{
 	content: "By ";
 }
+
