added outlined text to the home page slide show text

--- a/new/css/main.css
+++ b/new/css/main.css
@@ -1712,3 +1712,11 @@ a.pp_close {
 .item > img{
 	width:100%;
 }
+
+.outlineText {
+	text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000 !important; 
+}
